# AECP

./: .gitignore  AGENTS.md  CONTRIBUTING.md  ENHANCED_SUMMARY.md  EXECUTIVE_SUMMARY.md  FINAL_STATUS.md  MASTER_STATUS_REPORT.md  README.md  SUMMARY.md  matrix_transfer.py  release.sh  report_generator.py  requirements.txt  run_enhanced_poc.py  test_corpus.json  vector_store_dimension_poc.py  vocab_loader.py
.github/: dependabot.yml
aecp-python/: 00_START_HERE.md  CHANGELOG.md  CLAIMS.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  MANIFEST.in  PLUGIN_GUIDE.md  README.md  RELEASE_NOTES.md  aecp.toml  llms-full.txt  llms.txt  pyproject.toml  reproduce.ipynb  requirements-dev.txt  requirements.txt  setup.py
aecp-python/aecp/: __init__.py  debug.py  errors.py  matrix.py  negotiation.py  plugin.py  protocol.py  types.py  vocabulary.py
aecp-python/aecp/adapters/: __init__.py  base.py  cohere.py  huggingface.py  local.py  mock.py  openai.py  voyage.py
aecp-python/aecp/integrations/: __init__.py  agent_framework.py  base.py  mcp.py
aecp-python/aecp/patterns/: __init__.py  agent_handoff.py  cost_optimizer.py  privacy_bridge.py
aecp-python/docs/: when-reembedding-is-impossible.md
aecp-python/docs/playbooks/: _template.md  ada-002-to-te3-large.md  ada-002-to-te3-small.md
aecp-python/examples/: 01_migrate_numpy.py  custom_adapter.py
aecp-python/src/aecp/: __init__.py  cli.py  cli_doctor.py  cli_gate.py  cli_report.py  migrate.py  recalibration.py  reranking.py  serve.py
aecp-python/src/aecp/adapters/: __init__.py  base.py  chroma.py  langchain.py  llamaindex_store.py  pinecone.py  qdrant.py
aecp-python/src/aecp/calibration/: __init__.py  calib_v1.py  corpus.py  planner.py
aecp-python/src/aecp/mapping/: __init__.py  base.py  linear.py  mlp.py  registry.py
aecp-python/src/aecp/providers/: __init__.py  base.py  cached.py  cohere.py  factory.py  gemini.py  openai.py  sentence_transformers.py  voyage.py
aecp-python/src/aecp/quality/: __init__.py  gate.py  metrics.py  thresholds.json
aecp-python/src/aecp/reporting/: __init__.py  html_report.py
aecp-python/test_results/: incremental_calibration_20260205_211148.json  incremental_calibration_smaller_20260205_211728.json  transfer_comparison_10k_20260205_212516.json
aecp-python/tests/: __init__.py  conftest.py  fakes.py  test_adapters.py  test_cached.py  test_chroma_adapter.py  test_cli.py  test_cli_new_commands.py  test_gate.py  test_integrations.py  test_langchain_adapter.py  test_llamaindex_wrapper.py  test_local_adapter.py  test_mapping.py  test_matrix.py  test_migrate.py  test_openai_shim.py  test_patterns.py  test_protocol.py  test_quality.py  test_recalibration.py  test_release.py  test_reranking.py  test_serve.py  test_stores.py  test_telemetry.py  test_vocabulary.py
(+287 files in other folders)
