[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aecp"
version = "1.0.0"
description = "Agent Embedding Communication Protocol - Enable AI agents to communicate with 97% semantic fidelity"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "AECP Contributors", email = "aecp@example.com"}
]
keywords = [
    "ai", "agents", "embeddings", "semantic", "communication",
    "multi-agent", "llm", "machine-learning", "nlp", "vector"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.20.0,<2.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
voyage = ["voyageai>=0.1.0"]
cohere = ["cohere>=4.0.0"]
huggingface = ["sentence-transformers>=2.0.0"]
all = [
    "openai>=1.0.0",
    "voyageai>=0.1.0",
    "cohere>=4.0.0",
    "sentence-transformers>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.990",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/aecp"
Documentation = "https://aecp.dev/docs"
Repository = "https://github.com/yourusername/aecp"
Issues = "https://github.com/yourusername/aecp/issues"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["aecp"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
